--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://kit.fontawesome.com/b2b4a0bc09.js" crossorigin="anonymous"></script>
-    <title>React App</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta
+  name="description"
+  content="Web site created using create-react-app"
+  />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <script src="https://kit.fontawesome.com/b2b4a0bc09.js" crossorigin="anonymous"></script>
+  <title>React App</title>
+</head>
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
+<script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+
+<script>
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyB-Qj5y11gismV4eZbaubJL9B1CDTFI9-s",
+    authDomain: "web-chat-1b38f.firebaseapp.com",
+    databaseURL: "https://web-chat-1b38f.firebaseio.com",
+    projectId: "web-chat-1b38f",
+    storageBucket: "web-chat-1b38f.appspot.com",
+    messagingSenderId: "340398160492",
+    appId: "1:340398160492:web:62abd80b5f0a424c787649"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+</script>
 
 </html>
